<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_default"
            android:text="@string/back_to_login_screen" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txtTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/change_password"
                        android:textSize="26sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/inputEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtTitle"
                        android:layout_marginTop="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/change_pass_description"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/txtErrorInput"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:background="#ffccdd"
                            android:gravity="center_vertical"
                            android:text="@string/change_pass_description" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/inputPass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/inputEmail"
                        android:layout_marginTop="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/enter_email_change_pass"
                            android:textSize="22sp" />

                        <AutoCompleteTextView
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@drawable/border">

                            <requestFocus />
                        </AutoCompleteTextView>
                    </LinearLayout>

                    <Button
                        android:id="@+id/btnForgetPw"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/inputPass"
                        android:layout_marginTop="50dp"
                        android:background="#000"
                        android:text="@string/button_send_request_email"
                        android:textColor="#FFFF"
                        android:textSize="22sp" />
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
</FrameLayout>