<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/login_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:gravity="center"
            android:text="@string/register_title"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/login_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginTitle"
            android:layout_marginTop="@dimen/margin_default"
            android:background="#c0c0c0"
            android:gravity="center_vertical"
            android:text="@string/register_description"
            android:textSize="16sp" />

        <RelativeLayout
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_description"
            android:layout_marginTop="@dimen/margin_default"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/firstName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="姓"
                        android:textSize="@dimen/label_size" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@drawable/border">

                        <requestFocus />
                    </EditText>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="名"
                        android:textSize="@dimen/label_size" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/border" />
                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/input2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nameInput"
            android:layout_marginTop="@dimen/margin_default"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/inputC3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="セイ"
                        android:textSize="@dimen/label_size" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/border" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="メイ"
                        android:textSize="@dimen/label_size" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/border" />
                </LinearLayout>
            </LinearLayout>


        </RelativeLayout>

        <LinearLayout
            android:id="@+id/input3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input2"
            android:layout_marginTop="@dimen/margin_default"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="メールアドレス"
                android:textSize="@dimen/label_size" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/border" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/input4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input3"
            android:layout_marginTop="@dimen/margin_default"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="パスワード"
                android:textSize="@dimen/label_size" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/border" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/input5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input4"
            android:layout_marginTop="@dimen/margin_default"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="パスワード確認"
                android:textSize="@dimen/label_size" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/border" />
        </LinearLayout>


        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input5"
            android:layout_marginTop="@dimen/margin_default"
            android:background="#000"
            android:text="@string/button_register"
            android:textColor="#FFFF" />

        <TextView
            android:id="@+id/btnToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnRegister"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:text="@string/have_account_already"
            android:textSize="20sp" />

    </RelativeLayout>
</ScrollView>